[package]
name = "rocs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.12"
serde_tuple = "0.5.0"
tokio-tungstenite = { version = "*", features = ["connect", "handshake", "native-tls"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = ["full"] }
rust-ocpp = { version = "1.0", features = ["v2_0_1", "v1_6"] }
url = "*"
uuid = { version = "1.7.0", features = [ "v4", "fast-rng"]}
